more front end coding

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,5 +1,5 @@
-// cards
-.cards{
+// manga cards
+.manga-cards{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 8px;
@@ -7,8 +7,8 @@
   margin-top: 0px;
 }
 
-// card
-.card {
+// manga card
+.manga-card {
   display: flex;
   flex-direction:column;
   justify-content: center;
@@ -22,7 +22,7 @@
   transition: transform 0.2s ease-in-out;
 }
 
-.card:hover {
+.manga-card:hover {
   transform: translateY(-5px);
 }
 
@@ -34,8 +34,30 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.badge {
-  text-decoration: none;
-  background-color: #A8EACE;
-  color: black;
+
+//chapter cards
+.chapter-cards{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 8px;
+  padding-top: 0px;
+  margin-top: 0px;
+  border-radius: 5px;
+  //background color - TODO: Keep or not keep?
+  //background-color: rgba(255, 255, 255, 0.8);
+}
+
+
+//chapter card
+.chapter-card {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center; //text in center
+  align-content: center;
+  background-color: #FFFFD2;
+  border-radius: 8px;
+  font-weight: bold;
+  height: 36px;
+  font-size: 1.2em;
 }
