--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -40,9 +40,9 @@
           </li>
 
           <%# button to user "message" - currently fake %>
-          <li class="nav-item position-relative me-3">
-            <%= link_to "Message", "#", class: "nav-link pe-3"%>
-            <span class="position-absolute top-50 start-100 translate-middle p-2 bg-info badge rounded-pill">1
+          <li class="nav-item position-relative me-3 border border-primary">
+            <%= link_to "Message", "#", class: "nav-link pe-3 border border-primary"%>
+            <span class="position-absolute top-50 start-100 translate-middle p-2 bg-info badge rounded-pill border border-primary">1
               <span class="visually-hidden">New alerts</span>
             </span>
           </li>
