--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -52,3 +52,10 @@ li:hover{
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   transition: 0.2s;
 }
+
+// the yellow dot next to Message on navbar if any unread message
+.badge {
+  text-decoration: none;
+  background-color: #A8EACE;
+  color: black;
+}
