Manga Upload page major update :D

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -28,7 +28,7 @@
 // below is Mary coded:
 
 .avatar-user {
-  font-size: 4em;
+  // font-size: 4em;
   background-color: #A8EACE;
   padding: 0.5em;
   border-radius: 50%;
