--- a/app/views/layouts/mailer.text.erb
+++ b/app/views/layouts/mailer.text.erb
@@ -1,1 +1,8 @@
 <%= yield %>
+
+
+
+      <div class="field">
+        <%= form.label :cover_image, "Upload", class:"btn btn-primary" %>
+        <%= form.file_field :cover_image %>
+      </div>
