--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,3 +5,11 @@
 @import "navbar";
 @import "card";
 @import "font";
+
+.form-control {
+  font-family: 'Roboto', sans-serif;
+  color: #0a0a0a;
+  background-color: #A8EACE;
+  position: relative;
+  border-radius: 10px;
+}
