--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,4 @@
+<%# Main container %>
 <div class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
 
@@ -11,9 +12,9 @@
       </button>
   </div>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent" ></div>
+<%# PG-search bar %>
+<div class="collapse navbar-collapse" id="navbarSupportedContent" ></div>
   <div class="d-flex flex-row w-100 justify-content-between">
-    <%# PG-search bar %>
     <ul class="navbar-nav">
       <ul class="navbar-nav">
         <%= form_with url: mangas_path, method: :get, local: true, html: { class: "d-flex search-form" } do |form| %>
