--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -29,12 +29,30 @@
       border-color: #0056b3;
     }
 
-    .container-search {
-      --bs-gutter-x: 60rem;
-      --bs-gutter-y: 0;
-      width: 100%;
-      padding-right: calc(var(--bs-gutter-x) * .5);
-      padding-left: calc(var(--bs-gutter-x) * .5);
-      margin-right: auto;
-      margin-left: auto;
+    .search-form {
+      width: 65%;
+      height: 45px;
+      align-self: center;
+      background: linear-gradient(#A8EACE, #ccc);
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      border-radius: 25px;
+      display: flex;
+      margin-left: 350px;
+      padding-left: 115px;
+    }
+
+    .search-input {
+      width: 58%;
+      display: flex;
+      align-items: center;
+      font-family: 'Roboto', sans-serif;
+    }
+
+    .search-button {
+      margin: -35px;
+      background: none;
+      border: none;
+      padding: 0;
+      cursor: pointer;
     }
