--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,17 +13,17 @@
   </div>
 
 <%# PG-search bar %>
-<div class="collapse navbar-collapse" id="navbarSupportedContent" ></div>
+<%# <div class="collapse navbar-collapse" id="navbarSupportedContent" ></div>
   <div class="d-flex flex-row w-100 justify-content-between">
     <ul class="navbar-nav">
       <ul class="navbar-nav">
         <%= form_with url: mangas_path, method: :get, local: true, html: { class: "d-flex search-form" } do |form| %>
-          <%= form.text_field :search, placeholder: "Search Manga", class: "form-control me-2",
+          <%# <%= form.text_field :search, placeholder: "Search Manga", class: "form-control me-2",
             data: { target: "search.query",
             action: "keyup->search#search_manga" } %>
-          <%= form.submit "Search", class: "btn btn-outline-primary" %>
-        <% end %>
-      </ul>
+          <%# <%= form.submit "Search", class: "btn btn-outline-primary" %>
+        <%# <% end %>
+      <%# </ul>
     <ul class="navbar-nav"></ul>
   </div>
 </div>
